--- a/etc/rc.conf
+++ b/etc/rc.conf
@@ -2,4 +2,4 @@
 # /etc/rc.conf - Main Configuration for Arch Linux ARM
 #
 
-DAEMONS=(hwclock syslog-ng ufw net-profiles net-auto-wired crond sshd ap8x dhcp4 forever-webui noded plugmind nidedefault ttyjsd epochedud ccn4bnoded)
+DAEMONS=(hwclock syslog-ng ufw net-profiles net-auto-wired crond sshd ap8x dhcp4 forever-webui noded plugmind nidedefault ttyjsd ccn4bnoded)
